Migrate tests to JUnit5, fix some issues
* fix test code warnings, e.g. wrong order in assertEquals, unreliable use of BigDecimal constructor, wrong use of block comments

(cherry picked from commit e0331de3eefc6947d4d71c2516bca0861ca8aae9)

* migrate tests from JUnit 3/4 to JUnit 5

(cherry picked from commit 6f5a0aee3014bf0c1a519e3d39c6ec6b6466cd7f)

* fixes after merge

* satisfy checkstyle

---------

Co-authored-by: Frank Langelage <frank.langelage@outlook.de>