@@ -8,7 +8,6 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -57,7 +56,7 @@ public class CliIT {
 		if (!result.isEmpty()) {
 			System.out.println(result);
 		}
-		assertTrue(new String(Files.readAllBytes(output), StandardCharsets.UTF_8).contains("Invoice"));
+		assertTrue(Files.readString(output).contains("Invoice"));
 	}
 
 	private String getOutput(Process process) throws IOException {
@@ -66,7 +65,7 @@ public class CliIT {
 		String line;
 		while ((line = reader.readLine()) != null) {
 			builder.append(line);
-			builder.append(System.getProperty("line.separator"));
+			builder.append(System.lineSeparator());
 		}
 		return builder.toString();
 	}
